==> JayKun/Advanced-Projects/Lab2/RF24.cpp <==
#include "nRF24L01.h"
#include "RF24_config.h"
#include "RF24.h"

inline void RF24::beginTransaction() {
#if defined (RF24_SPI_TRANSACTIONS)
	_SPI.beginTransaction(SPISettings(RF_SPI_SPEED, MSBFIRST, SPI_MODE0));
#endif
	csn(LOW);
}

inline void RF24::endTransaction() {
	csn(HIGH);
#if defined (RF24_SPI_TRANSACTIONS)
	_SPI.endTransaction();
#endif
}

bool RF24::begin(void)
{
	uint8_t setup = 0;
	// Initialize pins
	if (ce_pin != csn_pin) pinMode(ce_pin, OUTPUT);
	pinMode(csn_pin, OUTPUT);
	_SPI.begin();
	ce(LOW);
	csn(HIGH);
	// Must allow the radio time to settle else configuration bits will not necessarily stick.
	// This is actually only required following power up but some settling time also appears to
	// be required after resets too. For full coverage, we'll always assume the worst.
	// Enabling 16b CRC is by far the most obvious case if the wrong timing is used - or skipped.
	// Technically we require 4.5ms + 14us as a worst case. We'll just call it 5ms for good measure.
	// WARNING: Delay is based on P-variant whereby non-P *may* require different timing.
	delay(5);
	// Reset CONFIG and enable 16-bit CRC.
	write_register(CONFIG, 0b00001100);
	// Set 1500uS (minimum for 32B payload in ESB@250KBPS) timeouts, to make testing a little easier
	// WARNING: If this is ever lowered, either 250KBS mode with AA is broken or maximum packet
	// sizes must never be used. See documentation for a more complete explanation.
	setRetries(5, 15);
	// check for connected module and if this is a p nRF24l01 variant
	if (setDataRate(RF24_250KBPS))
	{
		p_variant = true;
	}

	// Then set the data rate to the slowest (and most reliable) speed supported by all
	// hardware.
	setDataRate(RF24_1MBPS);
	// Disable dynamic payloads, to match dynamic_payloads_enabled setting - Reset value is 0
	toggle_features();
	write_register(FEATURE, 0);
	write_register(DYNPD, 0);
	// Reset current status
	// Notice reset and flush is the last thing we do
	write_register(NRF_STATUS, _BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT));

	// Set up default configuration.  Callers can always change it later.
	// This channel should be universally safe and not bleed over into adjacent
	// spectrum.
	setChannel(76);

	// Flush buffers
	flush_rx();
	flush_tx();

	powerUp(); //Power up by default when begin() is called

			   // Enable PTX, do not write CE high so radio will remain in standby I mode ( 130us max to transition to RX or TX instead of 1500us from powerUp )
			   // PTX should use only 22uA of power
	write_register(CONFIG, (read_register(CONFIG)) & ~_BV(PRIM_RX));

	// if setup is 0 or ff then there was no response from module
	return (setup != 0 && setup != 0xff);
}

void RF24::startListening(void)
{
#if !defined (RF24_TINY) && ! defined(LITTLEWIRE)
	powerUp();
#endif
	write_register(CONFIG, read_register(CONFIG) | _BV(PRIM_RX));
	write_register(NRF_STATUS, _BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT));
	ce(HIGH);
	// Restore the pipe0 adddress, if exists
	if (pipe0_reading_address[0] > 0) {
		write_register(RX_ADDR_P0, pipe0_reading_address, addr_width);
	}
	else {
		closeReadingPipe(0);
	}

	// Flush buffers
	//flush_rx();
	if (read_register(FEATURE) & _BV(EN_ACK_PAY)) {
		flush_tx();
	}

	// Go!
	//delayMicroseconds(100);
}

void RF24::stopListening(void)
{
	ce(LOW);

	delayMicroseconds(txRxDelay);

	if (read_register(FEATURE) & _BV(EN_ACK_PAY)) {
		delayMicroseconds(txRxDelay); //200
		flush_tx();
	}
	//flush_rx();
	write_register(CONFIG, (read_register(CONFIG)) & ~_BV(PRIM_RX));
	write_register(EN_RXADDR, read_register(EN_RXADDR) | _BV(pgm_read_byte(&child_pipe_enable[0]))); // Enable RX on pipe0

																									 //delayMicroseconds(100);

}

void RF24::powerDown(void)
{
	ce(LOW); // Guarantee CE is low on powerDown
	write_register(CONFIG, read_register(CONFIG) & ~_BV(PWR_UP));
}

void RF24::openReadingPipe(uint8_t child, uint64_t address)
{
	// If this is pipe 0, cache the address.  This is needed because
	// openWritingPipe() will overwrite the pipe 0 address, so
	// startListening() will have to restore it.
	if (child == 0) {
		memcpy(pipe0_reading_address, &address, addr_width);
	}

	if (child <= 6)
	{
		// For pipes 2-5, only write the LSB
		if (child < 2)
			write_register(pgm_read_byte(&child_pipe[child]), reinterpret_cast<const uint8_t*>(&address), addr_width);
		else
			write_register(pgm_read_byte(&child_pipe[child]), reinterpret_cast<const uint8_t*>(&address), 1);

		write_register(pgm_read_byte(&child_payload_size[child]), payload_size);
		write_register(EN_RXADDR, read_register(EN_RXADDR) | _BV(pgm_read_byte(&child_pipe_enable[child])));
	}
}

void RF24::openReadingPipe(uint8_t child, const uint8_t *address)
{
	// If this is pipe 0, cache the address.  This is needed because
	// openWritingPipe() will overwrite the pipe 0 address, so
	// startListening() will have to restore it.
	if (child == 0) {
		memcpy(pipe0_reading_address, address, addr_width);
	}
	if (child <= 6)
	{
		// For pipes 2-5, only write the LSB
		if (child < 2) {
			write_register(pgm_read_byte(&child_pipe[child]), address, addr_width);
		}
		else {
			write_register(pgm_read_byte(&child_pipe[child]), address, 1);
		}
		write_register(pgm_read_byte(&child_payload_size[child]), payload_size);
		write_register(EN_RXADDR, read_register(EN_RXADDR) | _BV(pgm_read_byte(&child_pipe_enable[child])));
	}
}

bool RF24::setDataRate(rf24_datarate_e speed)
{
	bool result = false;
	uint8_t setup;
	setup = read_register(RF_SETUP);
	setup &= ~(_BV(RF_DR_LOW) | _BV(RF_DR_HIGH));

	//different chips require different waiting times (dwbi)
#if defined(__arm__) || defined (RF24_LINUX) || defined (__ARDUINO_X86__)
	txRxDelay = 250;
#else //16Mhz Arduino
	txRxDelay = 85;
#endif


	if (speed == RF24_250KBPS)
	{
		setup |= _BV(RF_DR_LOW);
#if defined(__arm__) || defined (RF24_LINUX) || defined (__ARDUINO_X86__)
		txRxDelay = 450;
#else //16Mhz Arduino
		txRxDelay = 155;
#endif
	}
	else
	{
		if (speed == RF24_2MBPS)
		{
			// Set 2Mbs, RF_DR (RF_DR_HIGH) is set 1
			// Making it '01'
			setup |= _BV(RF_DR_HIGH);
#if defined(__arm__) || defined (RF24_LINUX) || defined (__ARDUINO_X86__)
			txRxDelay = 190;
#else //16Mhz Arduino	  
			txRxDelay = 65;
#endif
		}
	}
	write_register(RF_SETUP, setup);

	// Verify our result
	if (read_register(RF_SETUP) == setup)
	{
		result = true;
	}
	return result;
}

rf24_datarate_e RF24::getDataRate(void)
{
	rf24_datarate_e result;
	uint8_t dr = read_register(RF_SETUP) & (_BV(RF_DR_LOW) | _BV(RF_DR_HIGH));
	// Order matters in our case below
	if (dr == _BV(RF_DR_LOW))
	{
		// '10' = 250KBPS
		result = RF24_250KBPS;
	}
	else if (dr == _BV(RF_DR_HIGH))
	{
		// '01' = 2MBPS
		result = RF24_2MBPS;
	}
	else
	{
		// '00' = 1MBPS
		result = RF24_1MBPS;
	}
	return result;
}
