==> frand08/Proyecto_TDII_MEI/Proyecto/app/src/RF24.c <==
#include "nRF24L01.h"
#include "RF24.h"
#include "SPI_RF.h"

  inline void beginTransaction()
  {
	  Chip_GPIO_SetPinOutLow(LPC_GPIO,TOUCH_E);
  }

  inline void endTransaction()
  {
	  Chip_GPIO_SetPinOutHigh(LPC_GPIO,TOUCH_E);
  }

void begin(void)
{
	uint8_t i=0xFF;
	Chip_GPIO_SetPinOutLow(LPC_GPIO, CE_PIN); //Puerto CE
	Chip_GPIO_SetPinOutHigh(LPC_GPIO,TOUCH_E);

  // Must allow the radio time to settle else configuration bits will not necessarily stick.
  // This is actually only required following power up but some settling time also appears to
  // be required after resets too. For full coverage, we'll always assume the worst.
  // Enabling 16b CRC is by far the most obvious case if the wrong timing is used - or skipped.
  // Technically we require 4.5ms + 14us as a worst case. We'll just call it 5ms for good measure.
  // WARNING: Delay is based on P-variant whereby non-P *may* require different timing.
  //delay( 5 ) ;

  // Set 1500uS (minimum for 32B payload in ESB@250KBPS) timeouts, to make testing a little easier
  // WARNING: If this is ever lowered, either 250KBS mode with AA is broken or maximum packet
  // sizes must never be used. See documentation for a more complete explanation.
  write_register_byte(SETUP_RETR,(0X40 | 0x0F));

  // Restore our default PA level
  setPALevel( RF24_PA_MIN ) ;

  // Determine if this is a p or non-p RF24 module and then
  // reset our data rate back to default value. This works
  // because a non-P variant won't allow the data rate to
  // be set to 250Kbps.
  //if( setDataRate( RF24_250KBPS ) )
  //{
  //  p_variant = true ;
  //}

  // Then set the data rate to the slowest (and most reliable) speed supported by all
  // hardware.
  setDataRate( RF24_1MBPS ) ;

  // Initialize CRC and request 2-byte (16bit) CRC
  setCRCLength( RF24_CRC_16 ) ;

  // Disable dynamic payloads, to match dynamic_payloads_enabled setting
  write_register_byte(DYNPD,0);



  // Set up default configuration.  Callers can always change it later.
  // This channel should be universally safe and not bleed over into adjacent
  // spectrum.
  setChannel(76);

  SPI_ReadWrite(ACTIVATE);
  	SPI_ReadWrite(0x73);
  	Chip_GPIO_SetPinOutHigh(LPC_GPIO, TOUCH_E);


  	powerUp();
  		for(i=0xFF;i>0;i--);
  		for(i=0xFF;i>0;i--);
  // Flush buffers
  flush_rx();
  flush_tx();

  	// Reset current status
  	  // Notice reset and flush is the last thing we do
  	  write_register_byte(NRF_STATUS, RX_DR | TX_DS | MAX_RT );
  addr_width=5;
  p_variant = false;
  payload_size = 4;
  	  dynamic_payloads_enabled = false;
    pipe0_reading_address[0]=0;
}

void startListening(void)
{

  write_register_byte(CONFIG, read_register_byte(CONFIG) | PRIM_RX);
  write_register_byte(NRF_STATUS, RX_DR | TX_DS | MAX_RT );
  Chip_GPIO_SetPinOutHigh(LPC_GPIO,CE_PIN);
  // Restore the pipe0 adddress, if exists
  //if (pipe0_reading_address[0] > 0)
  //  write_register(RX_ADDR_P0, pipe0_reading_address, addr_width);


  // Flush buffers
  flush_rx();
  //if(read_register_byte(FEATURE) & EN_ACK_PAY)
	//flush_tx();

  // Go!
  //delayMicroseconds(100);
}

void stopListening(void)
{
	Chip_GPIO_SetPinOutLow(LPC_GPIO, CE_PIN); //Puerto CE
  flush_tx();
  flush_rx();
}

void powerDown(void)
{
  Chip_GPIO_SetPinOutLow(LPC_GPIO,CE_PIN); // Guarantee CE is low on powerDown
  write_register_byte(CONFIG,read_register_byte(CONFIG) & ~PWR_UP);
}

void openReadingPipe(uint8_t child, uint8_t *address)
{
  // If this is pipe 0, cache the address.  This is needed because
  // openWritingPipe() will overwrite the pipe 0 address, so
  // startListening() will have to restore it.


  if (child <= 6)
  {
    // For pipes 2-5, only write the LSB
    if ( child == 1 )
      write_register(child_pipe[child], address, addr_width);
    else
      write_register(child_pipe[child], address, 1);

    write_register_byte(child_payload_size[child],payload_size);

    // Note it would be more efficient to set all of the bits for all open
    // pipes at once.  However, I thought it would make the calling code
    // more simple to do it this way.
    write_register_byte(EN_RXADDR,read_register_byte(EN_RXADDR) | child_pipe_enable[child]);
  }
}

bool setDataRate(rf24_datarate_e speed)
{
  bool result = false;
  uint8_t setup = read_register_byte(RF_SETUP) ;

  setup &= ~(RF_DR) ;

    // Set 2Mbs, RF_DR (RF_DR_HIGH) is set 1
    // Making it '01'
    if ( speed == RF24_2MBPS )
    {
      //wide_band = true ;
      setup |= RF_DR;
    }

  write_register_byte(RF_SETUP,setup);

  // Verify our result
  if ( read_register_byte(RF_SETUP) == setup )
    result = true;


  return result;
}

rf24_datarate_e getDataRate( void )
{
  rf24_datarate_e result ;
  uint8_t dr = read_register_byte(RF_SETUP) & (RF_DR);

   if ( dr  )
  {
    // '01' = 2MBPS
    result = RF24_2MBPS ;
  }
  else
  {
    // '00' = 1MBPS
    result = RF24_1MBPS ;
  }
  return result ;
}
